--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in</title>
-    <link rel="shortcut icon" href="../images/CODECHAOS_LOGO-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../css/login.css" />
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
-    
-  </head>
-  <body>
-    <div class="main-container">
-      <form action="./home.html" class="sign-in-form" id="loginForm">
-        <h2 class="title">Sign In</h2>
-        <div class="input-field">
-          <i class="fas fa-user"></i>
-          <input type="text" placeholder="Username" />
-        </div>
-        <div class="input-field">
-          <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Password" />
-        </div>
-        <input type="submit" value="Login" class="btn solid" />
-
-        <p class="social-text">
-          <a href="" class="forget">Forget password?</a>
-        </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login to Code Chaos</title>
+  <link rel="stylesheet" href="../css/login.css">
+  <link rel="shortcut icon" href="../images/CODECHAOS_LOGO-removebg-preview.png" type="image/x-icon">
+</head>
+<body>
+  <div class="main-container">
+    <img src="../images/CODECHAOS_LOGO-removebg-preview.png" alt="" class="logo"><br>
+    <font class="sign-into-codechaos">Sign in to Code Chaos</font>
+    <div class="form-container">
+      <form action="#" id="login-form">
+        <br>
+        <font for="username" class="lable">Username or email address</font><br><br>
+        <input type="text" id="username"><br><br>
+        <font for="password" class="lable">Password</font><a href="#" class="forget">Forgot password?</a><br><br>
+        <input type="password" id="password"><br><br>
+        <button type="submit" class="submit-button">Login</button><br><br>
       </form>
     </div>
-
-    <script src="../javascript/login.js"></script>
-  </body>
+    <div class="create-account">
+      <font class="lable">New to Code Chaos? <a href="#" class="create-account-link">Create account</a></font>
+    </div>
+  </div>
+  <script src="../javascript/login.js"></script>
+</body>
 </html>
